# asciipal

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
asciipal/: __init__.py  __main__.py  achievements.py  activity_tracker.py  app.py  aquarium.py  battery.py  break_manager.py  character.py  config.py  effects.py  input_monitor.py  overlay.py  platform_support.py  state_machine.py  system_resources.py  time_awareness.py  weather.py
asciipal/assets/art/: alarmed.txt  cheering.txt  dizzy.txt  eating.txt  excited.txt  idle.txt  sleeping.txt  sweating.txt  watching.txt
docs/: DEVELOPMENT_WORKFLOW.md  IMPLEMENTATION_PLAN.md  RELEASE_CHECKLIST.md
tests/: test_achievements.py  test_activity_tracker.py  test_app_cli.py  test_app_rendering.py  test_aquarium.py  test_battery.py  test_break_manager.py  test_character.py  test_config.py  test_context_menu.py  test_effects.py  test_integration_pipeline.py  test_platform_support.py  test_state_machine.py  test_system_resources.py  test_time_awareness.py  test_weather.py
