[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asciipal"
version = "0.1.0"
description = "ASCII desktop companion reacting to user activity."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AsciiPal Contributors" }]
dependencies = [
  "pynput>=1.7.7",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]

[project.scripts]
asciipal = "asciipal.__main__:main"

[tool.setuptools]
packages = ["asciipal"]

[tool.setuptools.package-data]
asciipal = ["assets/art/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
